# crewAI

./: .coderabbit.yaml  .cursorignore  .cursorrules  .dockerignore  .editorconfig  .env.example  .env.test  .gitguardian.yaml  .gitignore  .pre-commit-config.yaml  .ruff.toml  .windsurfrules  404.html  @memories.md  AGENTS.md  AI_project.py  BENCHMARK.md  CLAUDE.md  Dockerfile  Dockerfile.test  EXPANDED_CLAUDE.md  GUARDRAIL_PROVIDER.md  ISSUE_3154_SOLUTION_ANALYSIS.md  LICENSE  MarkupSafe-3.0.2-cp310-cp310-macosx_11_0_arm64.whl  NETWORK_MONITORING_FEATURE.md  PR_DESCRIPTION.md  PyJWT-2.10.1-py3-none-any.whl  PyYAML-6.0.2-cp310-cp310-macosx_11_0_arm64.whl  README.md  README_STREAMING.md  RULESFORAI.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SECURITY_FIX_F001.md  SLACK_SUMMARY.md  START_HERE.txt  TRIGGER_IMPLEMENTATION_SUMMARY.md  VALIDATION_REPORT_v6.md  VALIDATION_REPORT_v7.md  (+119 more)
canary/: .gitignore  README.md  pyproject.toml
canary/src/canary/: crew.py  main.py
crew_trader_pro/: README.md  celerybeat-schedule  kline_analysis_report.md  pyproject.toml  trading_decision_report.json  trading_decision_report.md
crew_trader_pro/src/crew_trader_pro/: crew.py  main copy.copy  main.py
crew_trader_pro/src/crew_trader_pro/app/: celery_config.py
cryptocurrency_collaboration/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  report.md
cryptocurrency_collaboration/src/cryptocurrency_collaboration/: crew.py  main.py
dbquery/: .gitignore  README.md  pyproject.toml
dbquery/src/dbquery/: crew.py  main.py
graves_researcher/: README.md  pyproject.toml  report.md
graves_researcher/src/graves_researcher/: crew.py  main.py
krakenagents/: .env.example  README.md  __init__.py  __main__.py  comand.md  main.py  pyproject.toml  server.py
krakenagents/agents/: __init__.py  base.py
krakenagents/agents/futures/: __init__.py  carry.py  execution.py  leadership.py  microstructure.py  operations.py  research.py  risk.py  swing.py  systematic.py
krakenagents/agents/spot/: __init__.py  arbitrage.py  discretionary.py  event.py  execution.py  leadership.py  market_making.py  operations.py  research.py  risk.py  systematic.py
krakenagents/agents/staff/: __init__.py  ceo.py  compliance.py  data.py  group_cfo.py  group_cio.py  group_coo.py  group_cro.py  people.py  prime.py  security.py
krakenagents/api/: __init__.py  management.py
krakenagents/config/: __init__.py  llm_config.py  settings.py
krakenagents/crews/: __init__.py  futures_crew.py  spot_crew.py  staff_crew.py  trading_org.py
krakenagents/data/: crews.db
krakenagents/tasks/: __init__.py  base.py  futures_tasks.py  spot_tasks.py  staff_tasks.py
krakenagents/tools/: __init__.py  crew_delegation.py  kraken_futures.py  kraken_spot.py
krakenagents/tools/internal/: __init__.py  alert_system.py  journal.py  pnl_tracker.py  risk_dashboard.py
lib/cli/: README.md  pyproject.toml
lib/cli/tests/: test_cli.py  test_click_compatibility.py  test_config.py  test_constants.py  test_create_crew.py  test_create_flow.py  test_crew_run_tui.py  test_crew_test.py  test_entrypoint_consistency.py  test_flow_commands.py  test_git.py  test_input_prompt.py  test_install_crew.py  test_kickoff_flow.py  test_memory_migrate.py  test_model_catalog.py  test_plus_api.py  test_run_crew.py  test_run_declarative_flow.py  test_run_flow_definition.py  test_settings_command.py  test_token_manager.py  test_train_crew.py  test_utils.py  test_version.py
lib/core/: pyproject.toml
lib/crewai/: README.md  pyproject.toml  runner.py
lib/crewai-a2a/: README.md  pyproject.toml
lib/crewai-a2a/tests/: conftest.py  test_a2a_integration.py
lib/crewai-core/: README.md  pyproject.toml
lib/crewai-core/tests/: test_smoke.py
lib/crewai-files/: README.md  pyproject.toml
lib/crewai-files/tests/: test_factory.py  test_file_url.py  test_openai_formatting.py  test_resolved.py  test_resolver.py  test_ssrf_protection.py  test_upload_cache.py  test_uploader_factory.py
lib/crewai-tools/: BUILDING_TOOLS.md  README.md  generate_tool_specs.py  pyproject.toml  tool.specs.json
lib/crewai-tools/tests/: base_tool_test.py  file_read_tool_test.py  test_coinbase_agentic_wallet_tool.py  test_generate_tool_specs.py  test_import_errors.py  test_optional_dependencies.py  test_platform_tools_misc.py  test_tool_alias.py
lib/crewai/examples/: hdp_delegation_provenance.py  trust_verification_example.py
lib/crewai/scripts/: structured_output_with_tools_runner.py
lib/crewai/tests/: conftest.py  test_agent_language.py  test_agent_multimodal.py  test_agent_output_sanitization.py  test_agents_md.py  test_async_human_feedback.py  test_cache_preload.py  test_callback.py  test_checkpoint.py  test_checkpoint_cli.py  test_ci_check_classifier.py  test_consensus.py  test_context.py  test_context_strategy.py  test_conversation_memory.py  test_crew.py  test_crew_multimodal.py  test_crew_output.py  test_crew_reset_memories_readonly.py  test_crew_thread_safety.py  test_custom_llm.py  test_dependency_compatibility.py  test_dependency_constraints.py  test_docs_community_visual_identity.py  test_docs_links.py  test_docs_table_formatting.py  test_embedder_validation.py  test_event_record.py  test_executor_state_reset.py  test_flow.py  test_flow_as_tool.py  test_flow_ask.py  test_flow_budget.py  test_flow_conversation.py  test_flow_cost_governor.py  test_flow_default_override.py  test_flow_definition.py  test_flow_execution_id.py  test_flow_from_definition.py  test_flow_human_input_integration.py  (+46 more)
lib/devtools/: README.md  pyproject.toml
lib/devtools/tests/: test_docs_versioning.py  test_toml_updates.py  test_wait_for_pypi.py
lib/tools/: pyproject.toml
lib/tools/tests/: test_generate_tool_specs.py
make_my_docs_bot/: README.md  pyproject.toml  report.md
make_my_docs_bot/knowledge/: user_preference.txt
make_my_docs_bot/src/make_my_docs_bot/: crew.py  main.py
temp-crewai-tools/: pyproject.toml
temp-crewai-tools/crewai_tools/adapters/: lancedb_adapter.py
temp-crewai-tools/crewai_tools/rag/: core.py
temp-crewai-tools/tests/: base_tool_test.py
(+7988 files in other folders)
