[project]
name = "crewai-workspace"
dynamic = ["version"]
description = "Cutting-edge framework for orchestrating role-playing, autonomous AI agents. By fostering collaborative intelligence, CrewAI empowers agents to work together seamlessly, tackling complex tasks."
readme = "README.md"
authors = [
    { name = "Joao Moura", email = "joao@crewai.com" }
]
requires-python = ">=3.10,<3.14"

dependencies = [
    "crewai",
    "crewai-tools",
]

[project.urls]
Homepage = "https://crewai.com"
Documentation = "https://docs.crewai.com"
Repository = "https://github.com/crewAIInc/crewAI"

[dependency-groups]
dev = [
    "ruff>=0.13.1",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "bandit>=1.8.6",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-subprocess>=1.5.3",
    "pytest-recording>=0.13.4",
    "pytest-randomly>=4.0.1",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "pytest-split>=0.10.0",
    "types-requests==2.32.*",
    "types-pyyaml==6.0.*",
    "types-regex==2024.11.6.*",
    "types-appdirs==1.4.*",
    "git-filter-repo>=2.47.0",
]

[tool.ruff]
exclude = [
    "lib/crewai/src/crewai/cli/templates",
]
fix = true

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors (style issues)
    "F",      # Pyflakes (code errors)
    "B",      # flake8-bugbear (bug prevention)
    "S",      # bandit (security issues)
    "RUF",    # ruff-specific rules
    "N",      # pep8-naming (naming conventions)
    "W",      # pycodestyle warnings
    "PERF",   # performance issues
    "PIE",    # flake8-pie (unnecessary code)
    "ASYNC",  # async/await best practices
    "RET",    # flake8-return (return improvements)
    "UP006",  # use collections.abc
    "UP007",  # use X | Y for unions
    "UP035",  # use dict/list instead of typing.Dict/List
    "UP037",  # remove quotes from type annotations
    "UP045",  # use X | None instead of Optional[X]
    "UP004",  # use isinstance instead of type
    "UP008",  # use super() instead of super(Class, self)
    "UP010",  # use isinstance for type checks
    "UP018",  # use str() instead of "string"
    "UP031",  # use f-strings for .format()
    "UP032",  # use f-strings for .format() with positional
    "I001",   # sort imports
    "I002",   # remove unused imports
]
ignore = ["E501"]  # ignore line too long globally

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "RET504"]  # Allow assert statements and unnecessary assignments before return in tests

[tool.mypy]
exclude = ["lib/crewai/src/crewai/cli/templates", "lib/crewai/tests/"]
plugins = ["pydantic.mypy"]

[tool.bandit]
exclude_dirs = ["lib/crewai/src/crewai/cli/templates"]

[tool.pytest.ini_options]
markers = [
    "telemetry: mark test as a telemetry test (don't mock telemetry)",
]

[tool.uv.sources]
crewai = { workspace = true }
crewai-tools = { workspace = true }

[tool.uv.workspace]
members = [
    "lib/crewai",
    "lib/tools",
]

[tool.hatch.version]
path = "lib/crewai/src/crewai/__init__.py"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib/crewai/src/crewai"]
exclude = [
    "docs/**",
    "docs/",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "docs/**",
    "docs/",
]
