[project]
name = "crewai"
dynamic = ["version"]
description = "Cutting-edge framework for orchestrating role-playing, autonomous AI agents. By fostering collaborative intelligence, CrewAI empowers agents to work together seamlessly, tackling complex tasks."
readme = "README.md"
requires-python = ">=3.10,<3.14"
authors = [
    { name = "Joao Moura", email = "joao@crewai.com" }
]
dependencies = [
    # Core Dependencies
    "pydantic>=2.11.9",
    "openai>=1.13.3",
    "litellm==1.74.9",
    "instructor>=1.3.3",
    # Text Processing
    "pdfplumber>=0.11.4",
    "regex>=2024.9.11",
    # Telemetry and Monitoring
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-exporter-otlp-proto-http>=1.30.0",
    # Data Handling
    "chromadb~=1.1.0",
    "tokenizers>=0.20.3",
    "openpyxl>=3.1.5",
    "pyvis>=0.3.2",
    # Authentication and Security
    "python-dotenv>=1.1.1",
    "pyjwt>=2.9.0",
    # Configuration and Utils
    "click>=8.1.7",
    "appdirs>=1.4.4",
    "jsonref>=1.1.0",
    "json-repair==0.25.2",
    "uv>=0.4.25",
    "tomli-w>=1.1.0",
    "tomli>=2.0.2",
    "blinker>=1.9.0",
    "json5>=0.10.0",
    "portalocker==2.7.0",
    "pydantic-settings>=2.10.1",
]

[project.urls]
Homepage = "https://crewai.com"
Documentation = "https://docs.crewai.com"
Repository = "https://github.com/crewAIInc/crewAI"

[project.optional-dependencies]
tools = [
    "crewai-tools>=0.76.0",
]
embeddings = [
    "tiktoken~=0.8.0"
]
pdfplumber = [
    "pdfplumber>=0.11.4",
]
pandas = [
    "pandas>=2.2.3",
]
openpyxl = [
    "openpyxl>=3.1.5",
]
mem0 = ["mem0ai>=0.1.94"]
docling = [
    "docling>=2.12.0",
]
aisuite = [
    "aisuite>=0.1.10",
]
qdrant = [
    "qdrant-client[fastembed]>=1.14.3",
]
aws = [
    "boto3>=1.40.38",
]
watson = [
    "ibm-watsonx-ai>=1.3.39",
]
voyageai = [
    "voyageai>=0.3.5",
]

[dependency-groups]
dev = [
    "ruff>=0.13.1",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "bandit>=1.8.6",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-subprocess>=1.5.3",
    "pytest-recording>=0.13.4",
    "pytest-randomly>=4.0.1",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "pytest-split>=0.10.0",
    "types-requests==2.32.*",
    "types-pyyaml==6.0.*",
    "types-regex==2024.11.6.*",
    "types-appdirs==1.4.*",
]

[project.scripts]
crewai = "crewai.cli.cli:crewai"

[tool.ruff]
exclude = [
    "src/crewai/cli/templates",
]
fix = true

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors (style issues)
    "F",      # Pyflakes (code errors)
    "B",      # flake8-bugbear (bug prevention)
    "S",      # bandit (security issues)
    "RUF",    # ruff-specific rules
    "N",      # pep8-naming (naming conventions)
    "W",      # pycodestyle warnings
    "PERF",   # performance issues
    "PIE",    # flake8-pie (unnecessary code)
    "ASYNC",  # async/await best practices
    "RET",    # flake8-return (return improvements)
    "UP006",  # use collections.abc
    "UP007",  # use X | Y for unions
    "UP035",  # use dict/list instead of typing.Dict/List
    "UP037",  # remove quotes from type annotations
    "UP045",  # use X | None instead of Optional[X]
    "UP004",  # use isinstance instead of type
    "UP008",  # use super() instead of super(Class, self)
    "UP010",  # use isinstance for type checks
    "UP018",  # use str() instead of "string"
    "UP031",  # use f-strings for .format()
    "UP032",  # use f-strings for .format() with positional
    "I001",   # sort imports
    "I002",   # remove unused imports
]
ignore = ["E501"]  # ignore line too long globally

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "RET504"]  # Allow assert statements and unnecessary assignments before return in tests

[tool.mypy]
exclude = ["src/crewai/cli/templates", "tests/"]
plugins = ["pydantic.mypy"]


[tool.bandit]
exclude_dirs = ["src/crewai/cli/templates"]

[tool.pytest.ini_options]
markers = [
    "telemetry: mark test as a telemetry test (don't mock telemetry)",
]

# PyTorch index configuration, since torch 2.5.0 is not compatible with python 3.13
[[tool.uv.index]]
name = "pytorch-nightly"
url = "https://download.pytorch.org/whl/nightly/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-nightly", marker = "python_version >= '3.13'" },
  { index = "pytorch", marker = "python_version < '3.13'" },
]
torchvision = [
  { index = "pytorch-nightly", marker = "python_version >= '3.13'" },
  { index = "pytorch", marker = "python_version < '3.13'" },
]

[tool.hatch.version]
path = "src/crewai/__init__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
exclude = [
"docs/**",
"docs/",
]

[tool.hatch.build.targets.sdist]
exclude = [
"docs/**",
"docs/",
]
