[project]
name = "crew_trader_pro"
version = "0.1.0"
description = "crew_trader_pro using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.10.1"
]

[project.scripts]
crew_trader_pro = "crew_trader_pro.main:run"
run_crew = "crew_trader_pro.main:run"
train = "crew_trader_pro.main:train"
replay = "crew_trader_pro.main:replay"
test = "crew_trader_pro.main:test"
run_with_trigger = "crew_trader_pro.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"


