[project]
name = "cryptocurrency_collaboration"
version = "0.1.0"
description = "Cryptocurrency_Collaboration using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.10.1",
]

[project.scripts]
cryptocurrency_collaboration = "cryptocurrency_collaboration.main:run"
run_crew = "cryptocurrency_collaboration.main:run"
train = "cryptocurrency_collaboration.main:train"
replay = "cryptocurrency_collaboration.main:replay"
test = "cryptocurrency_collaboration.main:test"
run_with_trigger = "cryptocurrency_collaboration.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
