[project]
name = "dbquery"
version = "0.1.0"
description = "dbquery using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
dbquery = "dbquery.main:run"
run_crew = "dbquery.main:run"
train = "dbquery.main:train"
replay = "dbquery.main:replay"
test = "dbquery.main:test"
run_with_trigger = "dbquery.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
