[tool.poetry]
name = "graves_researcher"
version = "0.1.0"
description = "graves_researcher using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.70.1,<1.0.0" }


[tool.poetry.scripts]
graves_researcher = "graves_researcher.main:run"
run_crew = "graves_researcher.main:run"
train = "graves_researcher.main:train"
replay = "graves_researcher.main:replay"
test = "graves_researcher.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
