[project]
name = "crewai-cli"
version = "1.10.0"
description = "CLI for CrewAI - scaffold, run, deploy and manage AI agent crews without installing the full framework."
readme = "README.md"
authors = [
    { name = "Joao Moura", email = "joao@crewai.com" }
]
requires-python = ">=3.10, <3.14"
dependencies = [
    "click~=8.1.7",
    "pydantic~=2.11.9",
    "pydantic-settings~=2.10.1",
    "appdirs~=1.4.4",
    "httpx~=0.28.1",
    "pyjwt>=2.9.0,<3",
    "rich>=13.7.1",
    "tomli~=2.0.2",
    "tomli-w~=1.1.0",
    "packaging>=23.0",
    "python-dotenv~=1.1.1",
    "uv~=0.9.13",
    "portalocker~=2.7.0",
]

[project.urls]
Homepage = "https://crewai.com"
Documentation = "https://docs.crewai.com"
Repository = "https://github.com/crewAIInc/crewAI"

[project.scripts]
crewai = "crewai_cli.cli:crewai"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crewai_cli"]
