[project]
name = "crewai-cli"
dynamic = ["version"]
description = "CLI for CrewAI — scaffold, run, deploy and manage AI agent crews."
readme = "README.md"
authors = [
    { name = "Joao Moura", email = "joao@crewai.com" }
]
requires-python = ">=3.10, <3.14"
dependencies = [
    "crewai-core==1.14.5a3",
    "click~=8.1.7",
    "pydantic>=2.11.9,<2.13",
    "pydantic-settings~=2.10.1",
    "appdirs~=1.4.4",
    "cryptography>=42.0",
    "httpx~=0.28.1",
    "pyjwt>=2.9.0,<3",
    "rich>=13.7.1",
    "tomli~=2.0.2",
    "tomli-w~=1.1.0",
    "packaging>=23.0",
    "python-dotenv>=1.2.2,<2",
    "uv~=0.11.6",
    "textual>=7.5.0",
    "certifi",
]

[project.urls]
Homepage = "https://crewai.com"
Documentation = "https://docs.crewai.com"
Repository = "https://github.com/crewAIInc/crewAI"

[project.scripts]
crewai = "crewai_cli.cli:crewai"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/crewai_cli/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/crewai_cli"]
