[project]
name = "crewai-a2a"
dynamic = ["version"]
description = "A2A (Agent-to-Agent) protocol support for CrewAI"
readme = "README.md"
authors = [{ name = "Greyson LaLonde", email = "greyson@crewai.com" }]
requires-python = ">=3.10, <3.14"
dependencies = [
    "crewai==1.10.1b1",
    "a2a-sdk~=0.3.10",
    "httpx-auth~=0.23.1",
    "httpx-sse~=0.4.0",
    "aiocache[redis,memcached]~=0.12.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/crewai_a2a/__init__.py"

[tool.uv.sources]
crewai = { workspace = true }
crewai-files = { workspace = true }
