[project]
name = "crewai-files"
dynamic = ["version"]
description = "File handling utilities for CrewAI multimodal inputs"
readme = "README.md"
authors = [
    { name = "Greyson LaLonde", email = "greyson@crewai.com" }
]
requires-python = ">=3.10, <3.14"
dependencies = [
    "Pillow~=12.3.0",
    "pypdf~=6.13.3",
    "python-magic>=0.4.27",
    "aiocache~=0.12.3",
    "aiofiles~=24.1.0",
    "tinytag~=2.2.1",
    "av~=13.0.0",
]

[tool.uv]
exclude-newer = "3 days"
# pypdf 6.13.3 is a security fix newer than the global supply-chain cutoff.
exclude-newer-package = { pypdf = "2026-06-18T00:00:00Z" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/crewai_files/__init__.py"
