[project]
name = "crewai"
dynamic = ["version"]
description = "Cutting-edge framework for orchestrating role-playing, autonomous AI agents. By fostering collaborative intelligence, CrewAI empowers agents to work together seamlessly, tackling complex tasks."
readme = "README.md"
authors = [
    { name = "Joao Moura", email = "joao@crewai.com" }
]
requires-python = ">=3.10, <3.14"
dependencies = [
    # Core Dependencies
    "pydantic~=2.11.9",
    "openai~=1.83.0",
    "instructor>=1.3.3",
    # Text Processing
    "pdfplumber~=0.11.4",
    "regex~=2024.9.11",
    # Telemetry and Monitoring
    "opentelemetry-api~=1.34.0",
    "opentelemetry-sdk~=1.34.0",
    "opentelemetry-exporter-otlp-proto-http~=1.34.0",
    # Data Handling
    "chromadb~=1.1.0",
    "tokenizers~=0.20.3",
    "openpyxl~=3.1.5",
    # Authentication and Security
    "python-dotenv~=1.1.1",
    "pyjwt~=2.9.0",
    # Configuration and Utils
    "click~=8.1.7",
    "appdirs~=1.4.4",
    "jsonref~=1.1.0",
    "json-repair~=0.25.2",
    "tomli-w~=1.1.0",
    "tomli~=2.0.2",
    "json5~=0.10.0",
    "portalocker~=2.7.0",
    "pydantic-settings~=2.10.1",
    "mcp~=1.16.0",
    "uv~=0.9.13",
    "aiosqlite~=0.21.0",
]

[project.urls]
Homepage = "https://crewai.com"
Documentation = "https://docs.crewai.com"
Repository = "https://github.com/crewAIInc/crewAI"


[project.optional-dependencies]
tools = [
    "crewai-tools==1.7.2",
]
embeddings = [
    "tiktoken~=0.8.0"
]
pandas = [
    "pandas~=2.2.3",
]
openpyxl = [
    "openpyxl~=3.1.5",
]
mem0 = ["mem0ai~=0.1.94"]
docling = [
    "docling~=2.63.0",
]
qdrant = [
    "qdrant-client[fastembed]~=1.14.3",
]
aws = [
    "boto3~=1.40.38",
    "aiobotocore~=2.25.2",
]
watson = [
    "ibm-watsonx-ai~=1.3.39",
]
voyageai = [
    "voyageai~=0.3.5",
]
litellm = [
    "litellm~=1.74.9",
]
bedrock = [
    "boto3~=1.40.45",
]
google-genai = [
    "google-genai~=1.49.0",
]
azure-ai-inference = [
    "azure-ai-inference~=1.0.0b9",
]
anthropic = [
    "anthropic~=0.71.0",
]
a2a = [
     "a2a-sdk~=0.3.10",
     "httpx-auth~=0.23.1",
     "httpx-sse~=0.4.0",
     "aiocache[redis,memcached]~=0.12.3",
]


[project.scripts]
crewai = "crewai.cli.cli:crewai"


# PyTorch index configuration, since torch 2.5.0 is not compatible with python 3.13
[[tool.uv.index]]
name = "pytorch-nightly"
url = "https://download.pytorch.org/whl/nightly/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-nightly", marker = "python_version >= '3.13'" },
  { index = "pytorch", marker = "python_version < '3.13'" },
]
torchvision = [
  { index = "pytorch-nightly", marker = "python_version >= '3.13'" },
  { index = "pytorch", marker = "python_version < '3.13'" },
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/crewai/__init__.py"
